--- a/src/components/Pages/Project/Project.css
+++ b/src/components/Pages/Project/Project.css
@@ -6,7 +6,7 @@
   overflow-y: auto;
 }
 
-.header {
+.projectHeader {
   font-size: 3rem;
   text-align: center;
   padding: 25px;
@@ -64,5 +64,11 @@
     -webkit-transform: translateY(0);
     transform: translateY(0);
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container h1 {
+    margin-top: 400px;
   }
 }
