--- a/src/components/Pages/Landing/Landing.css
+++ b/src/components/Pages/Landing/Landing.css
@@ -106,3 +106,17 @@
     opacity: 1;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .container h1 {
+    margin-top: 200px;
+  }
+  .title {
+    font-size: 20vw;
+    text-align: center;
+  }
+  .description {
+    font-size: 5vw;
+    text-align: center;
+  }
+}
