contact page, landing mobile responsive

--- a/src/components/Pages/Contact/Contact.css
+++ b/src/components/Pages/Contact/Contact.css
@@ -163,6 +163,7 @@ li {
     border: 1px white solid;
     justify-content: space-between;
     height: 50vh;
+    width: 90vw;
   }
 
   .formBox {
