--- a/src/components/Pages/AboutMe/AboutMe.css
+++ b/src/components/Pages/AboutMe/AboutMe.css
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   align-items: end;
   margin: 50px auto;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
 }
 
@@ -130,7 +130,10 @@
     margin: 10px;
   }
   .icons {
-    height: 40px;
-    width: 40px;
+    height: 75px;
+    width: 75px;
+  }
+  .iconList {
+    margin: 0px 15px;
   }
 }
