--- a/src/components/Pages/Resume/Resume.css
+++ b/src/components/Pages/Resume/Resume.css
@@ -2,6 +2,10 @@
   min-height: 80vh;
 }
 
+.resume {
+  height: 70vh;
+  margin-bottom: 15px;
+}
 .fade-in-top {
   -webkit-animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
