--- a/src/components/Pages/Project/Project.css
+++ b/src/components/Pages/Project/Project.css
@@ -26,6 +26,10 @@
   opacity: 80%;
 }
 
+.card:hover {
+  opacity: 100%;
+}
+
 .fade-in-top {
   -webkit-animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
